k8s/services/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: microservices
spec:
  selector:
    app: frontend
  ports:
    - port: 4000
      targetPort: 4000
      protocol: TCP
  type: ClusterIP
